--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongodb": "^2.2.36",
+    "node.js": "0.0.0",
     "nodemon": "^1.18.9"
   },
   "devDependencies": {},
