--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "method-override": "^3.0.0",
     "mongodb": "^2.2.36",
     "node.js": "0.0.0",
     "nodemon": "^1.18.9"
